fix: invisible scrollbar

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,10 +1,10 @@
-.element {
+html {
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 	overflow: auto;
 }
 
-.element::-webkit-scrollbar {
+html::-webkit-scrollbar {
 	display: none;
 }
 
